--- a/CHANGES
+++ b/CHANGES
@@ -4,7 +4,7 @@ Changelog
 0.0.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Patch methods used to create temporary blob files so blob date is group readable
 
 
 0.0.3 (2011-11-15)
